Fixes #10 - Real lidl yellow (eyes still bleeding)

--- a/app/assets/stylesheets/_@countdown.scss
+++ b/app/assets/stylesheets/_@countdown.scss
@@ -70,7 +70,7 @@ body {
 
   &[timer="lidl"] {
     // body background
-    background: $yellow;
+    background: $lidl-yellow;
 
     s {
       .time {
