--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -15,6 +15,8 @@ $gap-smol: 0.8em;
 $gap-std: 1.2em;
 
 // colors
+$lidl-yellow: #fff000;
+
 $dark: #191b1d;
 $light: white;
 $blue: #42729b;
